# torch_fundamentals

./: 13 - radiologue_automatique_avec_pytorch.ipynb  14 - Transfer_learning_et_fine_tuning.ipynb  16 - Auto_encoder_débruitage.ipynb  17 - débruitage_de_données.ipynb  19 - Le RNN avec Pytorch.ipynb  21 - Classification audio avec Pytorch.ipynb  23 - Analyse_de_sentiments.ipynb  8 - Les réseaux de neurones avec PyTorch.ipynb  README.md  note.txt  pyproject.toml
Orsys_Pytorch/: 10 - Le sous et le sur entraînement.ipynb  10 - Le sous et le sur entraînement_correction.ipynb  12 - Le convolutional neural network avec PyTorch.ipynb  12 - Le convolutional neural network avec PyTorch_correction.ipynb  13 - radiologue_automatique_avec_pytorch.ipynb  13 - radiologue_automatique_avec_pytorch_correction.ipynb  14 - Transfer_learning_et_fine_tuning (1).ipynb  14 - Transfer_learning_et_fine_tuning_correction (1).ipynb  16 - Auto_encoder_débruitage.ipynb  16 - Auto_encoder_débruitage_correction (1).ipynb  17 - débruitage_de_données.ipynb  17 - débruitage_de_données_correction (1).ipynb  19 - Le RNN avec Pytorch.ipynb  19 - Le RNN avec Pytorch_correction.ipynb  21 - Classification audio avec Pytorch.ipynb  21 - Classification audio avec Pytorch_correction.ipynb  23 - Analyse_de_sentiments.ipynb  4 - A la découverte de Pytorch.ipynb  4 - A la découverte de Pytorch_correction.ipynb  6 - Régression_linéaire_avec_Pytorch.ipynb  6 - Régression_linéaire_avec_Pytorch_correction.ipynb  8 - Les réseaux de neurones avec PyTorch.ipynb  README.md  (+1 more)
